[java] '--enable-preview' flag in compiler options (IDEA-187805)